--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,3 @@
-Flask==2.2.5
-# Outdated & vulnerable (Dependabot will suggest Flask>=2.0.0)
-requests==2.32.0
-# Has security issues
-Jinja2==3.1.5
-# Just an outdated package for exampl
-# pip-audit: subdependency explicitly fixed
-idna==3.7
-    # pip-audit: subdependency explicitly fixed
-urllib3==1.26.19
+Flask==1.1.1  # Outdated & vulnerable (Dependabot will suggest Flask>=2.0.0)
+requests==2.19.1  # Has security issues
+Jinja2==3.1.4  # Just an outdated package for exampl
